tests/ft/type_checking/invalid/empty_types.jk
type Ok;
type NotOk;

mut o = Ok;
o = NotOk; // tc error
